# stable-worldmodel

./: .gitignore  README.md  debug.py  mkdocs.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yaml
docs/: baselines.md  checkpoints.md  cli.md  index.md  lance_implementation.md  quick_start.md
docs/api/: buffer.md  dataset.md  planning.md  policy.md  solver.md  world.md
docs/envs/: dmc.md  financial.md  gymnasium_control.md  gymnasium_robotics.md  maniskill.md  metaworld.md  ogb.md  pettingzoo.md  pinpad.md  tworoom.md
docs/guides/: checkpoints.md  online_learning.md
docs/tutorial/: collect_data.md  new_env.md  training_wm.md
examples/: example_financial.py
scripts/bench/: compare_h5_lance.py
scripts/benchmark/: compare_h5_lance.py  convert.py
scripts/benchmark/configs/: benchmark.yaml
scripts/data/: collect_atari.py  collect_cube.py  collect_dmc.py  collect_maniskill.py  collect_pinpad.py  collect_pinpad_discrete.py  collect_scene.py  collect_tworooms.py  convert.py  convert_to_lance.py
scripts/data/config/: collect_atari.yaml  default.yaml  maniskill.yaml
scripts/eval/: control_eval.py
scripts/eval/config/: config.yaml  cube.yaml  pusht.yaml  scene.yaml  tworoom.yaml
scripts/examples/: diamond_atari.py  financial.py  maniskill_demo_replay.py
scripts/expert/: tdmpc2_online.py
scripts/notebooks/: train_from_hf_buckets.ipynb
scripts/plan/: cube.yaml  eval.py  eval_ff.py  eval_gcbc.py  eval_hwm.py  eval_wm.py  tworoom.yaml  wireharness_results.txt
scripts/plan/config/: cube.yaml  maniskill.yaml  pusht.yaml  pusht_hwm.yaml  reacher.yaml  tworoom.yaml  wireharness.yaml
scripts/plan/launcher/: quentin.yaml
scripts/train/: diamond.py  diamond_full.py  dreamer4.py  gcbc.py  gciql.py  gciql_simple.py  gcivl.py  gcivl_simple.py  gcivl_simple_bis.py  genie.py  hilp.py  hilp_simple.py  hwm.py  iql.py  lewm.py  pldm.py  prejepa.py  tdmpc2.py
scripts/train/config/: diamond.yaml  diamond_atari.yaml  diamond_full.yaml  dreamer4.yaml  gcbc.yaml  gciql.yaml  gcivl.yaml  genie.yaml  hilp.yaml  hwm.yaml  iql.yaml  tdmpc2.yaml
scripts/visualization/: visualize_dataset.py  visualize_trajectories.py  visualize_value_function.py
scripts/visualization/configs/: config_datasets.yaml  config_trajectories.yaml  config_value.yaml
stable_worldmodel/: __init__.py  _spawn_compat.py  buffer.py  cli.py  policy.py  protocols.py  utils.py  world.py  wrapper.py  wrappers.py
stable_worldmodel/data/: __init__.py  buffer.py  dataset.py  format.py  lance_conversion.py  normalization.py  utils.py
stable_worldmodel/data/formats/: __init__.py  folder.py  hdf5.py  lance.py  lance_video.py  lerobot.py  mp4_index.py  utils.py  video.py
stable_worldmodel/envs/: __init__.py  dataset_registry.py  financial_trading.py
stable_worldmodel/envs/ale/: __init__.py  atari_wrappers.py
stable_worldmodel/envs/dmcontrol/: acrobot.py  ball_in_cup.py  cartpole.py  cheetah.py  dmcontrol.py  expert_policy.py  hopper.py  humanoid.py  pendulum.py  quadruped.py  walker.py
stable_worldmodel/envs/fin_env/: financial.py
stable_worldmodel/envs/gymnasium_control/: acrobot.py  cartpole.py  mountain_car.py  pendulum.py
stable_worldmodel/envs/gymnasium_robotics/: fetch.py
stable_worldmodel/envs/maniskill/: __init__.py  env.py  maniskill.py  tasks.py
stable_worldmodel/envs/metaworld/: __init__.py  metaworld_env.py
stable_worldmodel/envs/ogbench/: cube_env.py  expert_policy.py  pointmaze_env.py  scene_env.py
stable_worldmodel/envs/ogbench_manip/: __init__.py  expert_policy.py  point_maze.py  scene_env.py
stable_worldmodel/envs/openapps/: __init__.py  agent_policy.py  env.py  executor.py  mcp_client.py  paths.py  server.py
stable_worldmodel/envs/piecewise/: piecewise_env.py
stable_worldmodel/envs/pinpad/: __init__.py  constants.py  env.py  env_discrete.py  expert_policy.py
stable_worldmodel/envs/pusht/: env.py  expert_policy.py
stable_worldmodel/envs/two_room/: __init__.py  doorkey_env.py  env.py  expert_policy.py  legacy_env.py
stable_worldmodel/envs/two_room_doorkey/: __init__.py  env.py  expert_policy.py
stable_worldmodel/planning/: __init__.py  evaluator.py  objective.py
stable_worldmodel/solver/: __init__.py  base.py  categorical_cem.py  cem.py  composite.py  discrete_solvers.py  gd.py  grasp.py  icem.py  lagrangian.py  mppi.py  pgd.py  predictive_sampling.py  solver.py  utils.py
stable_worldmodel/tests/: test_dataset_registry.py  test_financial_trading.py
stable_worldmodel/wm/: __init__.py  gcbc.py  gcivl.py  gcrl.py  iql.py  lewm.py  loss.py  prejepa.py  tdmpc2.py  utils.py
stable_worldmodel/world/: __init__.py  env_pool.py  world.py
stable_worldmodel/wrapper/: __init__.py  default.py  pettingzoo.py  visual.py
tests/: fetch_env_test.py  test_buffer.py  test_env_pool.py  test_new_world.py  test_pettingzoo.py  test_policy.py  test_protocols.py  test_world.py  test_wrappers.py
tests/data/: test_cli_datasets.py  test_cli_preview.py  test_convert_video_formats.py  test_data.py  test_data_utils.py  test_datasets.py  test_dense_video_sampling.py  test_episode_data.py  test_format.py  test_hdf5_dataset.py  test_integration_real.py  test_lance.py  test_lance_video.py  test_lance_wide_column_read_hang.py  test_lerobot_adapter.py  test_merge.py  test_replay_buffer.py
tests/envs/: test_fetch.py  test_financial.py  test_maniskill.py  test_metaworld.py  test_pusht_env.py  test_pusht_policy.py  test_wireharness.py
tests/planning/: test_evaluator.py  test_objective.py
tests/solver/: test_base.py  test_composite.py  test_grasp.py
tests/wm/: test_diamond_agent.py  test_diamond_cost_model.py  test_diamond_edm.py  test_dreamer4.py  test_lewm.py  test_loss.py  test_pldm.py  test_prejepa.py  test_rollout_history_size.py
(+86 files in other folders)
