[project]
name = "stable-worldmodel"
version = "0.1.1"
description = "World Model Research Made Simple"
readme="README.md"
license="MIT"
authors = [{name = "Lucas Maes"}, {name = "Quentin Le Lidec"}, {name = "Randall Balestriero"}]
maintainers = [{name = "Lucas Maes", email = "lucas_maes@brown.edu"}]
urls = {Homepage = "http://github.com/galilai-group/stable-worldmodel"}
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "loguru",
  "tabulate",
  "gymnasium",
  "einops",
  "lancedb>=0.30.0",
  "pylance>=4.0.0",
  "pyarrow",
  "pillow",
  "tqdm",
  "typer",
  "rich",
]

[project.scripts]
swm = "stable_worldmodel.cli:app"

[project.optional-dependencies]
train = [
    "transformers>=4.50.0",
    "stable-pretraining>=0.1.7",
    "hydra-core",
    "hydra-submitit-launcher",
    "wandb",
]

env = [
    "pygame",
    "pymunk",
    "shapely",
    "ogbench",
    "minigrid",
    "gymnasium[all]",
    "gymnasium-robotics",
    "opencv-python-headless",
    "stable_baselines3>=2.0.0",
    "craftax>=1.5.0",
    "ale-py",
]

format = [
    "h5py",
    "hdf5plugin",
    "decord",
    "imageio[ffmpeg]",
]

lerobot = [
    "lerobot>=0.5.0; python_version >= '3.12'",
]

# OpenApps browser-app envs (swm/OpenApps-*). Kept separate so a plain
# ``stable-worldmodel`` install stays lean; opt in with
# ``stable-worldmodel[openapps]``. ``open-apps`` is sourced from git (see
# [tool.uv.sources]) and pulls in browsergym/fasthtml/mcp itself.
#
# NOTE: OpenApps' Hydra config and app routes only resolve from a *source
# checkout* (its wheel ships neither the config tree nor a working ``src``
# import path), so install open-apps **editable** for a runnable MCP server
# — this clones into the venv (not your project), config + routes included:
#   pip install -e "git+https://github.com/facebookresearch/OpenApps.git"
openapps = [
    "open-apps",
    "playwright",
    "mcp>=1.9.0",
]

all = [
    "stable-worldmodel[train,env,format,openapps]",
]

[dependency-groups]
dev = [
  "ipdb",
  "pre-commit",
  "pytest",
  "pytest-cov>=7.0.0",
  "ruff",
  "twine",
  "mkdocs-shadcn",
  "pymdown-extensions",
  "pillow",
  "decord",
  "imageio[ffmpeg]",
  "mkdocstrings[python]",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
# open-apps is not published to PyPI; install it from the OpenApps repo.
# uv strips this from published metadata, so it only applies to git/dev installs.
# NB: a non-editable `uv sync --extra openapps` resolves the code but not a
# runnable server — install open-apps editable (see the [openapps] note above).
open-apps = { git = "https://github.com/facebookresearch/OpenApps.git" }

[tool.uv.build-backend]
module-root = "."
source-exclude = [
    "**/.mypy_cache/**",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.coverage.run]
omit = ["stable_worldmodel/envs/*"]
