[project]
name = "stable-worldmodel"
version = "0.1.1"
description = "World Model Research Made Simple"
readme="README.md"
license="MIT"
authors = [{name = "Lucas Maes"}, {name = "Quentin Le Lidec"}, {name = "Randall Balestriero"}]
maintainers = [{name = "Lucas Maes", email = "lucas_maes@brown.edu"}]
urls = {Homepage = "http://github.com/galilai-group/stable-worldmodel"}
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "loguru",
  "tabulate",
  "gymnasium",
  "einops",
  "lancedb>=0.30.0",
  "pylance>=4.0.0",
  "pyarrow",
  "pillow",
  "tqdm",
  "typer",
  "rich",
  "hydra-core",
]

[project.scripts]
swm = "stable_worldmodel.cli:app"

[project.optional-dependencies]
train = [
    "transformers>=4.50.0",
    "stable-pretraining>=0.1.8",
    "datasets>=2.20.0",
    "hydra-submitit-launcher",
    "wandb",
]

env = [
    "pygame",
    "pymunk",
    "shapely",
    "ogbench",
    "minigrid",
    "gymnasium[all]",
    "gymnasium-robotics",
    "opencv-python-headless",
    "stable_baselines3>=2.0.0",
    "craftax>=1.5.0",
    "ale-py",
]

format = [
    "h5py",
    "hdf5plugin",
    "torchcodec",
    "imageio[ffmpeg]",
]

lerobot = [
    "lerobot>=0.5.0; python_version >= '3.12'",
]

all = [
    "stable-worldmodel[train,env,format]",
]

[dependency-groups]
# ManiSkill3 (SAPIEN) — Franka Panda manipulation + SIMPLER/real2sim Bridge tasks.
# A dependency group (not an extra) because it is GPU-only (needs CUDA + Vulkan) and
# has no clean wheel install on linux py3.11/3.12 (mani-skill -> mplib -> toppra, which
# only ships cp310 wheels and builds from sdist otherwise). Keeping it a group excludes
# it from `uv sync --all-extras` / `[all]`. Opt in with `uv sync --group maniskill`.
maniskill = [
    "mani-skill",
]

dev = [
  "ipdb",
  "pre-commit",
  "pytest",
  "pytest-cov>=7.0.0",
  "ruff",
  "twine",
  "mkdocs-shadcn",
  "pymdown-extensions",
  "pillow",
  "torchcodec",
  "imageio[ffmpeg]",
  "mkdocstrings[python]",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
source-exclude = [
    "**/.mypy_cache/**",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.coverage.run]
omit = ["stable_worldmodel/envs/*"]
